deploy/fullstack-app-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-frontend-service
  namespace: fullstack-application
spec:
  selector:
    app: fullstack-frontend
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
