deploy/fullstack-app-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-frontend-ingress
  namespace: fullstack-application
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: localhost.frontend    
    http:
      paths:
      - path: /api              
        pathType: Prefix
        backend:
          service:
            name: fullstack-backend-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fullstack-frontend-service
            port:
              number: 80
